--- a/templates/demo/app/base.html
+++ b/templates/demo/app/base.html
@@ -19,9 +19,9 @@
     <!-- Navbar -->
     {% include 'fragments/demo_app/navbar.html' %}
     <!-- Sidebar -->
-    {% comment %} {% include 'fragments/demo_app/sidebar.html' %} {% endcomment %}
+    {% include 'fragments/demo_app/sidebar.html' %}
 
-    <main class="p-4 md:ml-64 h-auto pt-20">
+    <main class="p-4 md:ml-64 h-auto pt-10">
       {% block main_app_content %}{% endblock %}
     </main>
   </div>
