--- a/templates/fragments/demo_app/navbar.html
+++ b/templates/fragments/demo_app/navbar.html
@@ -87,6 +87,7 @@
           type="button"
           data-dropdown-toggle="notification-dropdown"
           class="p-2 mr-1 text-gray-500 rounded-lg hover:text-gray-900 hover:bg-gray-100 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-700 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600"
+          onClick="display_by_id('notification-dropdown')"
         >
           <span class="sr-only">View notifications</span>
           <!-- Bell icon -->
@@ -104,7 +105,7 @@
         </button>
         <!-- Dropdown menu -->
         <div
-          class="absolute md:xl:right-6 md:xl:top-6 overflow-hidden z-50 my-4 max-w-sm text-base list-none bg-white rounded divide-y divide-gray-100 shadow-lg dark:divide-gray-600 dark:bg-gray-700 rounded-xl"
+          class="absolute hidden top-14 right-6 md:xl:top-6 overflow-hidden z-50 my-4 max-w-sm text-base list-none bg-white rounded divide-y divide-gray-100 shadow-lg dark:divide-gray-600 dark:bg-gray-700 rounded-xl"
           id="notification-dropdown"
         >
           <div
@@ -373,6 +374,7 @@
           type="button"
           data-dropdown-toggle="apps-dropdown"
           class="p-2 text-gray-500 rounded-lg hover:text-gray-900 hover:bg-gray-100 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-700 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600"
+          onClick="display_by_id('apps-dropdown')"
         >
           <span class="sr-only">View notifications</span>
           <!-- Icon -->
@@ -389,7 +391,7 @@
         </button>
         <!-- Dropdown menu -->
         <div
-          class="hidden overflow-hidden z-50 my-4 max-w-sm text-base list-none bg-white rounded divide-y divide-gray-100 shadow-lg dark:bg-gray-700 dark:divide-gray-600 rounded-xl"
+          class="absolute top-12 right-4 md:xl:right-6 md:xl:top-6 overflow-hidden z-50 my-4 max-w-sm text-base list-none bg-white rounded divide-y divide-gray-100 shadow-lg dark:bg-gray-700 dark:divide-gray-600 rounded-xl"
           id="apps-dropdown"
         >
           <div
@@ -593,6 +595,7 @@
           id="user-menu-button"
           aria-expanded="false"
           data-dropdown-toggle="dropdown"
+          onClick="display_by_id('dropdown')"
         >
           <span class="sr-only">Open user menu</span>
           <img
@@ -603,7 +606,7 @@
         </button>
         <!-- Dropdown menu -->
         <div
-          class="hidden z-50 my-4 w-56 text-base list-none bg-white rounded divide-y divide-gray-100 shadow dark:bg-gray-700 dark:divide-gray-600 rounded-xl"
+          class="z-50 absolute right-6 top-12 md:xl:right-6 md:xl:top-6 my-4 w-56 text-base list-none bg-white rounded divide-y divide-gray-100 shadow dark:bg-gray-700 dark:divide-gray-600 rounded-xl"
           id="dropdown"
         >
           <div class="py-3 px-4">
@@ -613,7 +616,7 @@
             >
             <span
               class="block text-sm text-gray-900 truncate dark:text-white"
-              >name@flowbite.com</span
+              >name@pyrl.com</span
             >
           </div>
           <ul
@@ -728,3 +731,5 @@
       </div>
     </div>
   </nav>
+
+<script src={%static 'js/display_by_id.js'%}></script>
