--- a/templates/fragments/main_app/navbar.html
+++ b/templates/fragments/main_app/navbar.html
@@ -86,7 +86,8 @@
         <button
           type="button"
           data-dropdown-toggle="notification-dropdown"
-          class="p-2 mr-1 text-gray-500 rounded-lg hover:text-gray-900 hover:bg-gray-100 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-700 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600"
+          class=" bg-red-400 p-2 mr-1 text-gray-500 rounded-lg hover:text-gray-900 hover:bg-gray-100 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-700 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600"
+          onClick="myFunction()"
         >
           <span class="sr-only">View notifications</span>
           <!-- Bell icon -->
@@ -728,3 +729,14 @@
       </div>
     </div>
   </nav>
+
+  <script>
+    function myFunction() {
+      var x = document.getElementById("notification-dropdown");
+      if (x.style.display === "block") {
+        x.style.display = "none";
+      } else {
+        x.style.display = "block";
+      }
+    }
+  </script>
