--- a/templates/base/form/index.html
+++ b/templates/base/form/index.html
@@ -3,7 +3,7 @@
 {% load custom_tags %}
 {% block title %}{{page_title}}{% endblock %}
 {% block content %}
-is_secure: {{ request.is_secure }}
+{% csrf_token%}
 <div class="w-full h-screen">
     <div class="m-auto h-full p-4">
         <h1 class="border-b border-gray-200 pb-2 dark:border-gray-800 text-center text-5xl sm:text-4xl font-bold">Welcome to {{'NAME'|get_setting}}</h1>
@@ -35,8 +35,6 @@ is_secure: {{ request.is_secure }}
                 first_name: $('#id_first_name').val(),
                 last_name: $('#id_last_name').val(),
                 password: $('#id_password').val(),
-                csrftoken: $('input[name=csrfmiddlewaretoken]').val(),
-                
             },
             success: function (data) {
                 $('h3').html(data);
