--- a/templates/demo/app/base.html
+++ b/templates/demo/app/base.html
@@ -20,6 +20,8 @@
     {% include 'fragments/demo_app/navbar.html' %}
     <!-- Sidebar -->
     {% include 'fragments/demo_app/sidebar.html' %}
+    <!-- Full -->
+    {% comment %} {% include 'fragments/demo_app/navbar_sidebar.html' %} {% endcomment %}
 
     <main class="p-4 md:ml-64 h-auto pt-10">
       {% block main_app_content %}{% endblock %}
