--- a/templates/fragments/demo_app/sidebar.html
+++ b/templates/fragments/demo_app/sidebar.html
@@ -1,7 +1,7 @@
 {% load static tailwind_tags %}
 {% tailwind_css  %}
 <aside
-      class="fixed top-0 left-0 z-40 w-64 h-screen pt-14 transition-transform -translate-x-full bg-white border-r border-gray-200 md:translate-x-0 dark:bg-gray-800 dark:border-gray-700"
+      class="fixed top-8 md:xl:top-0 left-0 z-40 w-64 h-screen pt-14 transition-transform bg-white border-r border-gray-200 md:translate-x-0 dark:bg-gray-800 dark:border-gray-700"
       aria-label="Sidenav"
       id="drawer-navigation"
     >
@@ -36,6 +36,17 @@
         </form>
         <ul class="space-y-2">
           <li>
+            <form action="#" method="GET" class="hidden lg:block lg:pl-2">
+              <label for="topbar-search" class="sr-only">Search</label>
+              <div class="relative mt-1 w-full">
+                <div class="flex absolute inset-y-0 left-0 items-center pl-3 pointer-events-none">
+                    <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20"> <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/> </svg>
+                </div>
+                <input type="text" name="email" id="topbar-search" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full pl-9 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" placeholder="Search">
+              </div>
+            </form>
+          </li>
+          <li>
             <a
               href="#"
               class="flex items-center p-2 text-base font-medium text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
@@ -59,7 +70,7 @@
               class="flex items-center p-2 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
               aria-controls="dropdown-pages"
               data-collapse-toggle="dropdown-pages"
-              onClick="display_by_id('dropdown-pages')"
+              onClick="display_by_id('dropdown-pages', 'hidden')"
             >
               <svg
                 aria-hidden="true"
@@ -121,7 +132,7 @@
               class="flex items-center p-2 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
               aria-controls="dropdown-sales"
               data-collapse-toggle="dropdown-sales"
-              onClick="display_by_id('dropdown-sales')"
+              onClick="display_by_id('dropdown-sales', 'hidden')"
             >
               <svg
                 aria-hidden="true"
@@ -210,7 +221,7 @@
               class="flex items-center p-2 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
               aria-controls="dropdown-authentication"
               data-collapse-toggle="dropdown-authentication"
-              onClick="display_by_id('dropdown-authentication')"
+              onClick="display_by_id('dropdown-authentication', 'hidden')"
             >
               <svg
                 aria-hidden="true"
@@ -384,7 +395,7 @@
           type="button"
           data-dropdown-toggle="language-dropdown"
           class="inline-flex justify-center p-2 text-gray-500 rounded cursor-pointer dark:hover:text-white dark:text-gray-400 hover:text-gray-900 hover:bg-gray-100 dark:hover:bg-gray-600"
-          onClick="display_by_id('language-dropdown')"
+          onClick="display_by_id('language-dropdown', 'hidden')"
         >
           <svg
             aria-hidden="true"
@@ -427,7 +438,7 @@
         </button>
         <!-- Dropdown -->
         <div
-          class="hidden z-50 my-4 text-base list-none bg-white rounded divide-y divide-gray-100 shadow dark:bg-gray-700"
+          class="hidden absolute bottom-8a z-50 my-4 text-base list-none bg-white rounded divide-y divide-gray-100 shadow dark:bg-gray-700"
           id="language-dropdown"
         >
           <ul class="py-1" role="none">
