--- a/templates/demo/app/base.html
+++ b/templates/demo/app/base.html
@@ -22,9 +22,8 @@
     {% include 'fragments/demo_app/sidebar.html' %}
     <!-- Full -->
     {% comment %} {% include 'fragments/demo_app/navbar_sidebar.html' %} {% endcomment %}
-    is_secure: {{ request.is_secure }}
 
-    <main class="p-4 md:ml-64 h-auto pt-12">
+    <main class="p-4 md:ml-64 h-auto pt-12 mt-16 md:mt-6">
       {% block main_app_content %}{% endblock %}
     </main>
   </div>
