--- a/templates/fragments/products/test_modal.html
+++ b/templates/fragments/products/test_modal.html
@@ -3,16 +3,16 @@
 {% load custom_tags %}
 {% load alert_tags %}
 
-<!-- Modal toggle -->
+{% comment %} <!-- Modal toggle -->
 <div class="flex justify-center m-5">
     <button id="defaultModalButton" data-modal-target="defaultModal" data-modal-toggle="defaultModal" class="block text-black bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800" type="button">
     Create product
     </button>
-</div>
+</div> {% endcomment %}
 
 <!-- Main modal -->
-<div id="defaultModal" tabindex="-1" aria-hidden="true" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-modal md:h-full">
-    <div class="relative p-4 w-full max-w-2xl h-full md:h-auto">
+<div id="createModal" class="flex overflow-y-auto backdrop-brightness-50 overflow-x-hidden fixed top-0 right-0 left-0 z-50 place-content-center w-full md:inset-0 h-modal md:h-full">
+    <div class="relative p-4 w-full max-w-2xl h-full md:h-auto md:translate-y-0 transition-transform translate-y-full">
         <!-- Modal content -->
         <div class="relative p-4 bg-white rounded-lg shadow dark:bg-gray-800 sm:p-5">
             <!-- Modal header -->
