--- a/templates/base/login/index.html
+++ b/templates/base/login/index.html
@@ -1,16 +1,19 @@
 {% extends 'base/home/base.html' %}
 {% block content %}
-<div class="container">
-    <form method="post">
-    {% for field in form %}
-        {{ field.label }}
-        {{ field}}
-    {% endfor %}
+<div class="flex-nowrap">
+    <form method="post" class="mx-auto mb-4 bg-gray-300 max-w-[50%]">
+        <div class="grid grid-cols-2 grid-rows-2 gap-4">
+            {% csrf_token %}
+            {% for field in form %}
+            <div>
+                {{ field.label }}
+            </div>
+            <div>
+                {{ field }}
+            </div>
+            {% endfor %}
+        </div>
+        <button type="submit" class="mx-auto py-2 px-4 bg-gray-300">Log In</button>
     </form>
 </div>
-<form method="post">
-    {% csrf_token %}
-    {{ form }}
-    <button type="submit">Log In</button>
-</form>
 {% endblock %}
