--- a/templates/base/home/index_new.html
+++ b/templates/base/home/index_new.html
@@ -22,7 +22,9 @@
         </div>
     </div>
     <div class="m-auto min-h-full max-h-fit p-4 mb-4">
-        <h1 class="border-b border-gray-200 dark:border-gray-700 text-center text-2xl font-bold pb-2">Welcome to {{'NAME'|get_setting}}</h1>
+      <div class="grid sm:grid-cols-1 md:grid-cols-3">
+        <h1 class="border-b mb-2 border-gray-200 sm:col-start-1 sm:col-end-2 md:col-start-2 md:col-end-3 dark:border-gray-700 text-center text-2xl font-bold pb-2">Welcome to {{'NAME'|get_setting}}</h1>
+      </div>
         <p class="text-center">{{'NAME'|get_setting}} combines the power of all mainstream communciation networks, with the flexibility of a self-hosted solution.</p>
         <p class="text-center">Client record management takes valuable time away from your customer success personnel, let us handle it.</p>
         <p class="text-center">Freeing up your time to focus on what matters most,</p>
@@ -30,31 +32,31 @@
         <p class="text-center pb-2">Let {{'NAME'|get_setting}} handle it for you.</p>
     </div>
     <h1 class="text-4xl text-center md:xl:text-5xl font-bold pb-2">Our core tenets</h1>
-    <p class="mb-8 text-center text-xl">What do we value most at {{'NAME'|get_setting}}?</p>
-    <div class="flex flex-wrap justify-around mb-4">
-        <div class="max-w-sm rounded overflow-hidden shadow-lg">
+    <p class="mb-2 text-center text-xl">What do we value most at {{'NAME'|get_setting}}?</p>
+    <div class="flex flex-wrap justify-around pb-4 gap-4">
+        <div class="max-w-sm rounded overflow-hidden shadow-lg bg-gray-100 dark:bg-gray-700 p-4">
             <img class="w-full" src="{% static 'img/svg_images/analysis.svg' %}" alt="Sunset in the mountains">
             <div class="px-6 py-4">
               <div class="font-bold text-xl mb-2">Reliability</div>
-              <p class="text-gray-700 text-base">
+              <p class="text-gray-700 dark:text-white text-base">
                 Here at {{'NAME'|get_setting}}, our mission is to provide the support to you and your team, to meet client expectations everytime. Utilising cloud-based distributed architecture, we are able to provide you with the best service at the lowest cost. Our team strives to maintain a high level of service quality, producing reliable and efficient solutions with minimal downtime.
               </p>
             </div>
           </div>
-          <div class="max-w-sm rounded overflow-hidden shadow-lg">
+          <div class="max-w-sm rounded overflow-hidden shadow-lg bg-gray-100 dark:bg-gray-700 p-4">
             <img class="w-full" src="{% static 'img/svg_images/investor_update.svg' %}" alt="Sunset in the mountains">
             <div class="px-6 py-4">
               <div class="font-bold text-xl mb-2">Accountability</div>
-              <p class="text-gray-700 text-base">
+              <p class="text-gray-700 dark:text-white text-base">
                 Open and honest development is at the core of our design philosphy. Committed to providing a platform with full accountability, so you know exactly where and when your data is in use. Our service is built with this in mind, providing communication channels that are as transparent as you need, to meet the dynamic challenges of any individual team that may need our Client Management System.
               </p>
             </div>
           </div>
-          <div class="max-w-sm rounded overflow-hidden shadow-lg">
+          <div class="max-w-sm rounded overflow-hidden shadow-lg bg-gray-100 dark:bg-gray-700 p-4">
             <img class="w-full" src="{% static 'img/svg_images/server_status.svg' %}" alt="Sunset in the mountains">
             <div class="px-6 py-4">
               <div class="font-bold text-xl mb-2">Flexibility</div>
-              <p class="text-gray-700 text-base">
+              <p class="text-gray-700 dark:text-white text-base">
                 Only a few team members? Working as highly independent agents? Cooperating in a large-scale team? Our system provides you the platform to manage your clients in a diverse and customisable setup. The changing landscape of modern business requires a flexible and adaptable system, minimal downtime, maximum flexibility, open and honest accountability - all the time.
               </p>
             </div>
